syntax = "proto3";
package cart;

option go_package = "CodeMart/proto/cart;cartpb";

message UserIdRequest {
  int32 user_id = 1;
}

service CartService {
  rpc AddToCart (CartItemRequest) returns (CartResponse);
  rpc RemoveFromCart (CartItemRequest) returns (CartResponse);
  rpc GetCart (UserIdRequest) returns (CartList);
}

message CartItemRequest {
  int32 user_id = 1;
  int32 product_id = 2;
}

message CartItem {
  int32 product_id = 1;
}

message CartList {
  repeated CartItem items = 1;
}

message CartResponse {
  string message = 1;
}
